--- a/PS4-CHEME-5660-Student-SIM-MinVar-RA-Fall-2025.ipynb
+++ b/PS4-CHEME-5660-Student-SIM-MinVar-RA-Fall-2025.ipynb
@@ -1144,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "5fbced25",
    "metadata": {},
    "outputs": [
@@ -1175,10 +1175,10 @@
     "    \n",
     "\n",
     "    # TODO: Build the Markowitz problem instance for the twin tickers. Once done, don't forget to comment out the ErrorException line\n",
-    "    throw(ErrorException(\"Ooops! Need to build the Markowitz problem instance for the twin tickers\"));\n",
+    "    #throw(ErrorException(\"Ooops! Need to build the Markowitz problem instance for the twin tickers\"));\n",
     "    \n",
     "    # Build the Markowitz problem instance -\n",
-    "    problem_sim_twins = nothing;\n",
+    "    problem_sim_twins = ;\n",
     "\n",
     "    problem_sim_twins; # return\n",
     "end;"
